[gd_scene load_steps=2 format=2]

[ext_resource path="res://Singletons/Multiplayer/TokenHandler.gd" type="Script" id=1]

[node name="TokenHandler" type="Node"]
script = ExtResource( 1 )

[node name="LoginRequest" type="HTTPRequest" parent="."]

[node name="CreateWorldRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="LoginRequest" to="." method="_on_LoginRequest_request_completed"]
[connection signal="request_completed" from="CreateWorldRequest" to="." method="_on_CreateWorldRequest_request_completed"]
